--- a/docs/docs/02-learn/01-fundamentals/02-gateway.mdx
+++ b/docs/docs/02-learn/01-fundamentals/02-gateway.mdx
@@ -31,5 +31,15 @@ graph TD
 
 ### [kit_authz](https://github.com/go-saas/kit/blob/main/gateway/apisix/cmd/go-runner/plugins/kit_authz.go)
 
-
 See [authorization](./authorization)
+
+
+### Initialize and migrate gateway
+
+#### Migration
+
+You can config routes and upsteams in the configuration of [sys module](../../modules/sys)
+
+#### Sync services with registry
+
+see [registry](./registry#Gateway%20Integration)
