--- a/docs/docs/02-learn/01-fundamentals/17-protobuf.mdx
+++ b/docs/docs/02-learn/01-fundamentals/17-protobuf.mdx
@@ -19,10 +19,14 @@ We use it in these sections
 
 ## Grpc Gateway 
 
-## Buf
+## [Buf](https://buf.build/)
 
 ## Tools
 
 ### protoc-gen-go-errors-i18n
 
+Generate localizable errors
+
 ### protoc-gen-go-grpc-proxy
+
+Unify the grpc server and client interface
