--- a/docs/docs/02-learn/01-fundamentals/19-realtime.mdx
+++ b/docs/docs/02-learn/01-fundamentals/19-realtime.mdx
@@ -2,3 +2,5 @@
 sidebar_label: Realtime
 title: Realtime
 ---
+
+Realtime functions of Kit is powered by [centrifuge](https://github.com/centrifugal/centrifuge)
