--- a/docs/docs/02-learn/01-fundamentals/16-distributed-transaction.mdx
+++ b/docs/docs/02-learn/01-fundamentals/16-distributed-transaction.mdx
@@ -2,3 +2,17 @@
 sidebar_label: Distributed Transaction
 title: Distributed Transaction
 ---
+
+Kit integrate with [Dtm](https://en.dtm.pub/) to accomplish Distributed Transaction
+
+
+see https://github.com/go-saas/kit/blob/main/dtm/service/helper.go
+
+### Two-phase message
+
+See https://en.dtm.pub/guide/e-msg.html#how-to-guarantee-atomicity
+
+
+
+## Refer
+https://github.com/go-saas/kit/issues/19
